// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots ACS Components/CameraSettings Camera Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown2-label"
        >
          Camera
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown2-label Dropdown2-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown2"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown2-option"
            role="option"
          >
            Logitech WebCam
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/LocalDeviceSettings Local Device Settings Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Stack css-52 css-2"
      >
        <div
          className="ms-Dropdown-container"
        >
          <label
            className="ms-Label ms-Dropdown-label label-20"
            id="Dropdown0-label"
          >
            Camera
          </label>
          <div
            aria-disabled={false}
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="Dropdown0-label Dropdown0-option"
            className="ms-Dropdown dropdown-4"
            data-is-focusable={true}
            id="Dropdown0"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <span
              aria-atomic={true}
              aria-invalid={false}
              aria-live="polite"
              aria-posinset={1}
              aria-selected={true}
              aria-setsize={3}
              className="ms-Dropdown-title title-5"
              id="Dropdown0-option"
              role="option"
            >
              Logitech WebCam
            </span>
            <span
              className="ms-Dropdown-caretDownWrapper caretDownWrapper-6"
            >
              <i
                aria-hidden={true}
                className="root-37 ms-Dropdown-caretDown caretDown-22"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          className="ms-Dropdown-container"
        >
          <label
            className="ms-Label ms-Dropdown-label label-20"
            id="Dropdown1-label"
          >
            Microphone
          </label>
          <div
            aria-disabled={false}
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="Dropdown1-label Dropdown1-option"
            className="ms-Dropdown dropdown-4"
            data-is-focusable={true}
            id="Dropdown1"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <span
              aria-atomic={true}
              aria-invalid={false}
              aria-live="polite"
              aria-posinset={1}
              aria-selected={true}
              aria-setsize={3}
              className="ms-Dropdown-title title-5"
              id="Dropdown1-option"
              role="option"
            >
              Headphones (Buy More Brand)
            </span>
            <span
              className="ms-Dropdown-caretDownWrapper caretDownWrapper-6"
            >
              <i
                aria-hidden={true}
                className="root-37 ms-Dropdown-caretDown caretDown-22"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MediaControls Media Controls Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Stack css-81 css-2"
      >
        <button
          className="ms-Button ms-Button--action ms-Button--command css-82 root-3"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyDownCapture={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-4"
            data-automationid="splitbuttonprimary"
          >
            <div
              className="css-86"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <g
                    className="ui-icon__outline at"
                  >
                    <path
                      d="M2.85355 2.14652C2.65829 1.95126 2.34171 1.95126 2.14645 2.14652C1.95118 2.34179 1.95118 2.65837 2.14645 2.85363L3.50058 4.20777C2.61732 4.59341 2 5.47462 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H11.5C12.5254 16 13.4066 15.3827 13.7922 14.4994L17.1464 17.8536C17.3417 18.0489 17.6583 18.0489 17.8536 17.8536C18.0488 17.6584 18.0488 17.3418 17.8536 17.1465L2.85355 2.14652ZM12.9875 13.6947C12.892 14.4311 12.2625 15 11.5 15H4.5C3.67157 15 3 14.3284 3 13.5V6.5C3 5.73754 3.56887 5.10795 4.30533 5.01252L12.9875 13.6947Z"
                    />
                    <path
                      d="M13 10.8787L16.4692 14.3479C17.1231 14.7616 18 14.2957 18 13.5001V6.50011C18 5.67606 17.0592 5.20568 16.4 5.70011L14 7.50011V6.5C14 5.11929 12.8807 4 11.5 4H6.12134L7.12134 5H11.5C12.3284 5 13 5.67157 13 6.5V10.8787ZM14 8.75011L17 6.50011V13.5001L14 11.2501V8.75011Z"
                    />
                  </g>
                  <g
                    className="ui-icon__filled"
                  >
                    <path
                      d="M2.85355 2.14652C2.65829 1.95126 2.34171 1.95126 2.14645 2.14652C1.95118 2.34178 1.95118 2.65837 2.14645 2.85363L3.50058 4.20777C2.61732 4.59341 2 5.47461 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H10.5C11.8136 16 12.8906 14.9869 12.9922 13.6994L17.1464 17.8536C17.3417 18.0489 17.6583 18.0489 17.8536 17.8536C18.0488 17.6584 18.0488 17.3418 17.8536 17.1465L2.85355 2.14652Z"
                    />
                    <path
                      d="M16.7642 14.4319L15.3547 13.2334L14 11.8787V7.93076L16.7692 5.61749C17.2575 5.20956 18 5.55679 18 6.19309V13.8605C18 14.4999 17.2512 14.846 16.7642 14.4319Z"
                    />
                    <path
                      d="M13 10.8787L6.12134 4H10.5C11.8807 4 13 5.11929 13 6.5V10.8787Z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </span>
        </button>
        <button
          className="ms-Button ms-Button--action ms-Button--command css-82 root-3"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-4"
            data-automationid="splitbuttonprimary"
          >
            <div
              className="css-86"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <g
                    className="ui-icon__outline at"
                  >
                    <path
                      d="M12 5V9.87866L12.8984 10.777C12.9647 10.5292 13 10.2687 13 9.99998V5C13 3.34315 11.6569 2 10 2C8.38301 2 7.06481 3.2793 7.00232 4.88098L8 5.87866V5C8 3.89543 8.89543 3 10 3C11.1046 3 12 3.89543 12 5Z"
                    />
                    <path
                      d="M7 7.70712L2.14645 2.85357C1.95118 2.65831 1.95118 2.34172 2.14645 2.14646C2.34171 1.9512 2.65829 1.9512 2.85355 2.14646L17.8536 17.1465C18.0488 17.3417 18.0488 17.6583 17.8536 17.8536C17.6583 18.0488 17.3417 18.0488 17.1464 17.8536L13.5195 14.2266C12.6858 14.9216 11.6434 15.3745 10.5 15.4776V17.5C10.5 17.7761 10.2761 18 10 18C9.72386 18 9.5 17.7761 9.5 17.5V15.4776C6.69675 15.2249 4.5 12.869 4.5 9.99998C4.5 9.72384 4.72386 9.49998 5 9.49998C5.27614 9.49998 5.5 9.72384 5.5 9.99998C5.5 12.4853 7.51472 14.5 10 14.5C11.0625 14.5 12.039 14.1318 12.8088 13.5159L11.7382 12.4454C11.2478 12.7946 10.6479 13 10 13C8.34315 13 7 11.6568 7 9.99998V7.70712ZM11.016 11.7231L8 8.70712V9.99998C8 11.1046 8.89543 12 10 12C10.3709 12 10.7182 11.899 11.016 11.7231Z"
                    />
                    <path
                      d="M14.803 12.6817L14.0614 11.9401C14.3426 11.3527 14.5 10.6947 14.5 9.99998C14.5 9.72384 14.7239 9.49998 15 9.49998C15.2761 9.49998 15.5 9.72384 15.5 9.99998C15.5 10.9737 15.247 11.8883 14.803 12.6817Z"
                    />
                  </g>
                  <g
                    className="ui-icon__filled"
                  >
                    <path
                      d="M13 10.0007C12.9999 10.2692 12.9646 10.5294 12.8984 10.777L7.00232 4.88098C7.06481 3.2793 8.38301 2 10 2C11.6569 2 13 3.34315 13 5V10.0007Z"
                    />
                    <path
                      d="M7 7.70712V9.99998C7 11.6568 8.34315 13 10 13C10.6479 13 11.2478 12.7946 11.7382 12.4454L12.8088 13.5159C12.039 14.1318 11.0625 14.5 10 14.5C7.51472 14.5 5.5 12.4853 5.5 9.99998C5.5 9.72384 5.27614 9.49998 5 9.49998C4.72386 9.49998 4.5 9.72384 4.5 9.99998C4.5 12.869 6.69675 15.2249 9.5 15.4776V17.5C9.5 17.7761 9.72386 18 10 18C10.2761 18 10.5 17.7761 10.5 17.5V15.4776C11.6434 15.3745 12.6858 14.9216 13.5195 14.2266L17.1464 17.8536C17.3417 18.0488 17.6583 18.0488 17.8536 17.8536C18.0488 17.6583 18.0488 17.3417 17.8536 17.1465L2.85355 2.14646C2.65829 1.9512 2.34171 1.9512 2.14645 2.14646C1.95118 2.34172 1.95118 2.65831 2.14645 2.85357L7 7.70712Z"
                    />
                    <path
                      d="M14.803 12.6817C15.247 11.8883 15.5 10.9737 15.5 9.99998C15.5 9.72384 15.2761 9.49998 15 9.49998C14.7239 9.49998 14.5 9.72384 14.5 9.99998C14.5 10.6947 14.3426 11.3527 14.0614 11.9401L14.803 12.6817Z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </span>
        </button>
        <button
          className="ms-Button ms-Button--action ms-Button--command css-82 root-3"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-4"
            data-automationid="splitbuttonprimary"
          >
            <div
              className="css-86"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <g
                    className="ui-icon__outline at"
                  >
                    <path
                      d="M10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                    />
                    <path
                      d="M2 6C2 4.89543 2.89543 4 4 4H16C17.1046 4 18 4.89543 18 6V14C18 15.1046 17.1046 16 16 16H4C2.89543 16 2 15.1046 2 14V6ZM4 5C3.44772 5 3 5.44772 3 6V14C3 14.5523 3.44772 15 4 15H16C16.5523 15 17 14.5523 17 14V6C17 5.44772 16.5523 5 16 5H4Z"
                    />
                  </g>
                  <path
                    className="ui-icon__filled"
                    d="M4 4C2.89543 4 2 4.89543 2 6V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V6C18 4.89543 17.1046 4 16 4H4ZM10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                  />
                </svg>
              </span>
            </div>
          </span>
        </button>
        <button
          className="ms-Button ms-Button--action ms-Button--command css-84 root-11"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-4"
            data-automationid="splitbuttonprimary"
          >
            <div
              className="css-86"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <path
                    className="ui-icon__outline at"
                    d="M10 6.00001C13.3317 5.99572 15.5858 7.2756 17.154 8.65976C17.8139 9.2422 18.116 10.1179 17.9594 10.94L17.8015 11.7692C17.6535 12.5461 16.9272 13.0679 16.1042 12.9884L14.4666 12.8302C13.753 12.7613 13.2241 12.2401 13 11.5001C12.6957 10.4953 12.5 9.75009 12.5 9.75009C11.7522 9.44357 11.0138 9.25005 10 9.25005C8.98623 9.25005 8.26225 9.46492 7.5 9.75009C7.5 9.75009 7.29566 10.496 7 11.5001C6.80244 12.171 6.49595 12.7567 5.79708 12.8269L4.16895 12.9905C3.35656 13.0722 2.57765 12.5555 2.3467 11.7818L2.09921 10.9526C1.85286 10.1273 2.0727 9.25869 2.67633 8.67245C4.10141 7.28843 6.67315 6.00433 10 6.00001ZM13.4754 9.52689L13.5008 9.62157C13.5232 9.70474 13.5565 9.82664 13.5991 9.97972C13.6846 10.2861 13.8075 10.7163 13.9571 11.2102C14.0936 11.661 14.3462 11.8139 14.5628 11.8348L16.2004 11.993C16.5457 12.0264 16.7746 11.816 16.8191 11.5821L16.9771 10.7529C17.0653 10.2894 16.8963 9.76613 16.4923 9.40948C15.0673 8.1517 13.0404 6.9961 10.0013 7.00001C6.92594 7.00401 4.60599 8.19238 3.37303 9.38982C3.04458 9.70881 2.9145 10.1877 3.05744 10.6666L3.30493 11.4957C3.39647 11.8024 3.72575 12.03 4.06896 11.9955L5.69709 11.8319C5.73551 11.8281 5.74859 11.8203 5.7511 11.8189C5.75521 11.8165 5.77275 11.8057 5.80155 11.7692C5.8711 11.6811 5.9536 11.5135 6.04073 11.2176C6.18728 10.7199 6.31122 10.2861 6.39847 9.97694C6.44208 9.82241 6.47648 9.69914 6.49992 9.61474L6.52663 9.51827C6.62916 9.15132 6.98467 8.89552 7.14961 8.81349C7.96877 8.50703 8.81921 8.25005 10 8.25005C11.1653 8.25005 12.0327 8.47779 12.8793 8.8248C13.0313 8.88736 13.3617 9.10921 13.4672 9.4961L13.4691 9.50315L13.4754 9.52689Z"
                  />
                  <path
                    className="ui-icon__filled"
                    d="M17.9594 10.94L17.8015 11.7691C17.6535 12.546 16.9272 13.0678 16.1042 12.9883L14.4666 12.8301C13.753 12.7612 13.2241 12.24 13 11.5C12.6957 10.4952 12.5 9.75 12.5 9.75C11.7522 9.44348 11.0138 9.24996 10 9.24996C8.98623 9.24996 8.26225 9.46483 7.5 9.75C7.5 9.75 7.29566 10.4959 7 11.5C6.80244 12.1709 6.49595 12.7566 5.79708 12.8268L4.16895 12.9904C3.35656 13.0721 2.57765 12.5554 2.3467 11.7817L2.09921 10.9525C1.85286 10.1272 2.0727 9.2586 2.67633 8.67236C4.10141 7.28834 6.6656 6.50821 9.99245 6.50389C13.3241 6.4996 15.5858 7.27551 17.154 8.65967C17.8139 9.24211 18.116 10.1178 17.9594 10.94Z"
                  />
                </svg>
              </span>
              <span
                className="css-85"
              >
                Leave
              </span>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MediaGallery Media Gallery Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="css-98"
          style={
            Object {
              "gridTemplateColumns": "repeat(2, 1fr)",
              "gridTemplateRows": "repeat(2, minmax(0, 1fr))",
            }
          }
        >
          <div
            className="css-97"
          >
            <div
              className="ms-Stack css-92 css-2"
            >
              <div
                className="ms-Stack css-93 css-3"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-4"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-11"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-13"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-16"
                      >
                        <span>
                          L
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <label
                className="ms-Label css-91 root-19"
              >
                Local
              </label>
            </div>
          </div>
          <div
            className="css-97"
          >
            <div
              className="ms-Stack css-92 css-2"
            >
              <div
                className="ms-Stack css-93 css-3"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-4"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-11"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-13"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-20"
                      >
                        <span>
                          R
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <label
                className="ms-Label css-91 root-19"
              >
                Remote1
              </label>
            </div>
          </div>
          <div
            className="css-97"
          >
            <div
              className="ms-Stack css-92 css-2"
            >
              <div
                className="ms-Stack css-93 css-3"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-4"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-11"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-13"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-21"
                      >
                        <span>
                          R
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <label
                className="ms-Label css-91 root-19"
              >
                Remote2
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MediaGalleryTile Media Gallery Tile Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "250px",
            "width": "400px",
          }
        }
      >
        <div
          className="ms-Stack css-92 css-2"
        >
          <div
            className="ms-Stack css-93 css-3"
          >
            <div
              className="ms-Persona ms-Persona--size100 root-4"
            >
              <div
                className="ms-Persona-coin ms-Persona--size100 coin-11"
                role="presentation"
              >
                <div
                  className="ms-Persona-imageArea imageArea-13"
                  role="presentation"
                >
                  <div
                    aria-hidden="true"
                    className="ms-Persona-initials initials-16"
                  >
                    <span>
                      H
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <label
            className="ms-Label css-91 root-19"
          >
            hello
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MicrophoneSettings Microphone Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown0-label"
        >
          Microphone
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown0-label Dropdown0-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown0"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown0-option"
            role="option"
          >
            Headphones (Buy More Brand)
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ParticipantStack Participant Stack Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Stack css-102 css-2"
      >
        <div
          aria-orientation="horizontal"
          className="ms-FocusZone css-6 ms-OverflowSet root-3"
          data-focuszone-id="FocusZone0"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet-item item-4"
          >
            <div
              onContextMenu={[Function]}
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size32 ms-Persona--online root-7"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size32 coin-14"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-16"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-19"
                    >
                      <span>
                        U
                      </span>
                    </div>
                    <div
                      className="ms-Persona-presence presence-20"
                      role="presentation"
                    />
                  </div>
                </div>
                <div
                  className="ms-Persona-details details-8"
                >
                  <div
                    className="ms-Persona-primaryText primaryText-9"
                    dir="auto"
                  >
                    <div
                      className="ms-TooltipHost root-22"
                      onBlurCapture={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      User2
                    </div>
                  </div>
                  <div
                    className="ms-Persona-secondaryText secondaryText-10"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-tertiaryText tertiaryText-11"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-optionalText optionalText-12"
                    dir="auto"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          className="ms-FocusZone css-6 ms-OverflowSet root-3"
          data-focuszone-id="FocusZone4"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet-item item-4"
          >
            <div
              onContextMenu={[Function]}
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size32 ms-Persona--online root-7"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size32 coin-14"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-16"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-28"
                    >
                      <span>
                        U
                      </span>
                    </div>
                    <div
                      className="ms-Persona-presence presence-20"
                      role="presentation"
                    />
                  </div>
                </div>
                <div
                  className="ms-Persona-details details-8"
                >
                  <div
                    className="ms-Persona-primaryText primaryText-9"
                    dir="auto"
                  >
                    <div
                      className="ms-TooltipHost root-22"
                      onBlurCapture={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      User3
                    </div>
                  </div>
                  <div
                    className="ms-Persona-secondaryText secondaryText-10"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-tertiaryText tertiaryText-11"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-optionalText optionalText-12"
                    dir="auto"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          className="ms-FocusZone css-6 ms-OverflowSet root-3"
          data-focuszone-id="FocusZone8"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet-item item-4"
          >
            <div
              onContextMenu={[Function]}
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size32 ms-Persona--online root-7"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size32 coin-14"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-16"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-29"
                    >
                      <span>
                        U
                      </span>
                    </div>
                    <div
                      className="ms-Persona-presence presence-20"
                      role="presentation"
                    />
                  </div>
                </div>
                <div
                  className="ms-Persona-details details-8"
                >
                  <div
                    className="ms-Persona-primaryText primaryText-9"
                    dir="auto"
                  >
                    <div
                      className="ms-TooltipHost root-22"
                      onBlurCapture={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      User1 (You)
                    </div>
                  </div>
                  <div
                    className="ms-Persona-secondaryText secondaryText-10"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-tertiaryText tertiaryText-11"
                    dir="auto"
                  />
                  <div
                    className="ms-Persona-optionalText optionalText-12"
                    dir="auto"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ParticipantStackItem Participant Stack Item Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onContextMenu={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="ms-Persona ms-Persona--size32 ms-Persona--online root-2"
        >
          <div
            className="ms-Persona-coin ms-Persona--size32 coin-9"
            role="presentation"
          >
            <div
              className="ms-Persona-imageArea imageArea-11"
              role="presentation"
            >
              <div
                aria-hidden="true"
                className="ms-Persona-initials initials-14"
              >
                <span>
                  J
                </span>
              </div>
              <div
                className="ms-Persona-presence presence-15"
                role="presentation"
              />
            </div>
          </div>
          <div
            className="ms-Persona-details details-3"
          >
            <div
              className="ms-Persona-primaryText primaryText-4"
              dir="auto"
            >
              <div
                className="ms-TooltipHost root-17"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Jim
              </div>
            </div>
            <div
              className="ms-Persona-secondaryText secondaryText-5"
              dir="auto"
            />
            <div
              className="ms-Persona-tertiaryText tertiaryText-6"
              dir="auto"
            />
            <div
              className="ms-Persona-optionalText optionalText-7"
              dir="auto"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ReadReceipt Read Reciept Icon Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-TooltipHost root-2"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          aria-hidden={true}
          className="root_02b12b2b css-59"
          role="presentation"
          style={Object {}}
        >
          <svg
            className="svg_02b12b2b"
            viewBox="0 0 2048 2048"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1491 595l90 90-749 749-365-365 90-90 275 275 659-659zM1024 0q141 0 272 36t245 103 207 160 160 208 103 245 37 272q0 141-36 272t-103 245-160 207-208 160-245 103-272 37q-141 0-272-36t-245-103-207-160-160-208-103-244-37-273q0-141 36-272t103-245 160-207 208-160T751 37t273-37zm0 1920q123 0 237-32t214-90 182-141 140-181 91-214 32-238q0-123-32-237t-90-214-141-182-181-140-214-91-238-32q-123 0-237 32t-214 90-182 141-140 181-91 214-32 238q0 123 32 237t90 214 141 182 181 140 214 91 238 32z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/SendBox Send Box Story Book Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": "480px",
          }
        }
      >
        <div
          className="ms-Stack css-61 css-2"
        >
          <div
            className="ms-TextField ms-TextField--multiline ms-TextField--borderless css-60 root-4"
          >
            <div
              className="ms-TextField-wrapper wrapper-5"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-6"
              >
                <textarea
                  aria-invalid={false}
                  aria-label="Type"
                  className="ms-TextField-field ms-TextField--unresizable css-62 field-7"
                  id="sendbox"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Type a new message"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="css-64 sendIconWrapper"
            onClick={[Function]}
          >
            <div
              className="css-65"
            />
          </div>
        </div>
        <div
          className="ui-alert au av aw ax ay az ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs"
          data-uses-unhanded-props={true}
          onFocus={[Function]}
        >
          <div
            className="ui-box au bt ui-alert__body"
            data-uses-unhanded-props={true}
            id="alert-body-1"
          >
            <div
              className="ui-box bt ui-alert__content"
              data-uses-unhanded-props={true}
              dir="auto"
            >
              Please wait 30 seconds to send new messages
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/TypingIndicator Typing Indicator Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="css-104"
      >
        <span
          className="css-105"
        >
          User1, 
        </span>
        <span
          className="css-105"
        >
          User2
        </span>
        <span
          className="css-105"
        >
           and 5 others are typing...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupCall Group Call Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "35rem",
            "maxWidth": "50rem",
            "width": "100%",
          }
        }
      >
        
        Please fill in Connection String to run group call widget.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupChat Group Chat Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="root-0"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid",
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "30rem",
            "maxWidth": "50rem",
            "padding": "0 10px",
            "width": "100%",
          }
        }
      >
        Please fill in Connection String or required params to run GroupChat.
      </div>
    </div>
  </div>
</div>
`;
